@@ -14,7 +14,8 @@ convert_date(x, type, fraction = FALSE, tz = "")
     numeric
   }
   \item{type}{
-    character: currently \code{"excel"} and \code{"matlab"} are supported.
+    character: \code{"excel"}, \code{"matlab"} and
+    \code{"spss"}/\code{"pspp"} are supported.
   }
   \item{fraction}{
     logical: should fractional dates (i.e. times) be used?  Default is
@@ -31,17 +32,18 @@ convert_date(x, type, fraction = FALSE, tz = "")
   \code{\link{Date}}. For Excel, only the Windows format is supported.
   Note that dates before 1 March 1900 are probably wrong since Excel
   considers 1900 a leap year (which it is not).
-
+    
 }
 \value{
   A vector of class \code{\link{Date}}, or \code{\link{POSIXct}} if
   fraction is \code{TRUE}.
 }
 \author{
-  Enrico Schumann
+  Enrico Schumann; type \code{spss}/\code{pspp}
+  suggested and based on a patch by J\"org Beyer
 }
 \seealso{
-\code{\link{as.Date}}
+\code{\link{as.Date}}, \code{\link{as.POSIXlt}}
 }
 \examples{
 convert_date(40000, "excel")
