@@ -3,7 +3,8 @@ v0.4-1  (????-??-??; not yet released)
   o new functions 'hour' 'minute', and 'second', which
     work just as 'year', etc.
 
-  o ....
+  o convert_date: support for PSPP/SPSS dates and times;
+    based on a patch by J\"org Beyer
 
 v0.4-0  (2020-03-25)
 
